# xg5000-mcp

./: .env.example  .gitignore  READ.md  README.md  pyproject.toml
config/: points.example.yaml  points.yaml
docs/: FIELD-COMMISSIONING.md  HANDOFF.md  taesung-project-review.md
docs/plans/: 2026-05-27-ls-modbus-mcp-design.md  2026-05-27-ls-modbus-mcp-implementation.md
src/ls_modbus_mcp/: modbus_client.py  points.py  server.py
tests/: test_docs.py  test_modbus_client.py  test_package.py  test_points.py  test_server_tools.py
tests/fixtures/: points_bool_integer.yaml  points_invalid_area.yaml  points_invalid_count.yaml  points_valid.yaml
